updated css and bug fixes for profiles

--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -153,15 +153,28 @@ body{
 // }
 .profile-index-item-container img:hover{
     // border: 2px solid white;
-    box-shadow:  0 0 0 2px #ffffff
+    box-shadow:  0 0 0 2px #ffffff;
+    cursor: pointer;
+    
+   
+    
     
 
 }
 
 
 .add-img img:hover{
-    box-shadow:  0 0 0 2px #ffffff
+    box-shadow:  0 0 0 2px #ffffff;
+    cursor: pointer;
+    border-radius: 7px;
+
+
+    
 }
+.profile-img-icon{
+    border-radius: 7px;
+
+    }
 .manage-container:hover{
     border: white;
 }
@@ -328,3 +341,35 @@ body{
     background: red;
     color: white;
 }
+
+.edit-profile-img{
+    position: relative;
+    // border: 4px solid red;
+    img{
+    border-radius: 7px;
+
+    }
+
+    &:hover{
+    box-shadow:  0 0 0 4px #ffffff;
+    border-radius: 6px;
+    cursor: pointer;
+    }
+}
+
+.edit-gradient{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+.edit-icon{
+    position: absolute;
+    z-index: 4;
+    top: 40%;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto;
+}
+
