--- a/app/assets/stylesheets/genre.scss
+++ b/app/assets/stylesheets/genre.scss
@@ -1,10 +1,10 @@
 .genre{
-    // border: 4px solid rgb(87, 75, 252);
+    border: 4px solid rgb(87, 75, 252);
     // position: absolute;
     // height: 100px;
     // margin-bottom: 100px;
     z-index: 5;
-    
+    position: relative;
     // margin-left: 100px;
     display: flex;
     flex-direction: column;
@@ -40,7 +40,7 @@
       .genre-list-container{
           font-size: 12px;
           font-weight: bold;
-        //    border: 2px solid rgb(182, 49, 49);
+          //  border: 2px solid rgb(182, 49, 49);
             margin-right: 10px;
           border-radius: 4px;
              width: 315px;
@@ -85,22 +85,28 @@
 }
 
 .genre-list{
+  position: relative;
     display: flex;
       margin: 20px 0 50px 0;
-    //   overflow-x: scroll;
-    //   border: 4px solid blueviolet;
+      // overflow-x: scroll;
+      width: max-content;
+      border: 4px solid blueviolet;
     //   position: relative;
     // overflow: hidden;
+    // flex-wrap: wrap;
     justify-content: flex-start;
     
-    margin-left: 5vw ;
-    margin-right: 5vw ;
+    // margin-left: 3vw ;
+    margin-left: 50px;
+    margin-right: 3vw ;
 }
 
-
+body{
+  overflow-x: hidden;
+}
 .square {
 //  border: 2px solid rgb(255, 0, 0);
-          z-index: 2;
+  z-index: 2;
 
   width: 250px;
   height: 150px;
@@ -164,7 +170,7 @@
 }
 
 .genre-list{
-    overflow: visible;
+    // overflow: visible;
 }
 
 .genre-title{
@@ -273,4 +279,51 @@
     font-weight: lighter;
   }
   margin-bottom: 5px;
+}
+
+.sliderArrow{
+  size:  100px;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(22, 22, 22, 0.1);
+  z-index: 100;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  // display: none;
+
+    
+
+
+}
+.sliderArrow:hover{
+  // display: block;
+  // background-color: re;
+}
+.sliderArrow-right{
+  size:  100px;
+  height: 100%;
+  position: absolute;
+  background-color: rgba(22, 22, 22, 0.5);
+  z-index: 100;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  // margin-left: 92vw;
+  // margin-left: 100px;
+}
+
+.genre-list{
+  // transform: translateX(250px);
+  transition: all 1s ease;
 }
