updated css scroll bug fixes and several other bug fixes

--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -472,7 +472,7 @@ h3 {
     // background-color: rgb(168, 4, 4);
     border-top: 9px solid #222;
 
-      margin: 0 100px;
+      // margin: 0 100px;
       padding: 50px 45px 20px;
 
         .splash-footer{
