--- a/app/assets/stylesheets/genre.scss
+++ b/app/assets/stylesheets/genre.scss
@@ -1,9 +1,9 @@
 .genre{
-    border: 4px solid rgb(87, 75, 252);
+    // border: 4px solid rgb(87, 75, 252);
     // position: absolute;
     // height: 100px;
     // margin-bottom: 100px;
-    z-index: 5;
+    // z-index: 5;
     position: relative;
     // margin-left: 100px;
     display: flex;
@@ -89,12 +89,12 @@
     display: flex;
       margin: 20px 0 50px 0;
       // overflow-x: scroll;
-      width: max-content;
-      border: 4px solid blueviolet;
+      // width: 100%;
+      // border: 4px solid blueviolet;
     //   position: relative;
     // overflow: hidden;
     // flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     
     // margin-left: 3vw ;
     margin-left: 50px;
@@ -150,7 +150,7 @@ body{
 .square:hover {
   border-radius: 10px;
   transform: scale(1.4,1.6);
-          z-index: 1000;
+          z-index: 6;
 
 //   transition-delay: .1s;
 //   width: 350vw;
@@ -169,9 +169,9 @@ body{
   z-index: 6;
 }
 
-.genre-list{
-    // overflow: visible;
-}
+// .genre-list{
+//     // overflow: visible;
+// }
 
 .genre-title{
   margin-left: 10vw;
@@ -286,7 +286,7 @@ body{
   height: 100%;
   position: absolute;
   background-color: rgba(22, 22, 22, 0.1);
-  z-index: 100;
+  z-index: 7;
   left: 0;
   top: 0;
   bottom: 0;
@@ -295,22 +295,19 @@ body{
   align-items: center;
   justify-content: center;
   cursor: pointer;
+  visibility: hidden;
   // display: none;
-
-    
-
-
 }
-.sliderArrow:hover{
-  // display: block;
-  // background-color: re;
-}
+// .sliderArrow:hover{
+//   // display: block;
+//   // background-color: re;
+// }
 .sliderArrow-right{
   size:  100px;
   height: 100%;
   position: absolute;
   background-color: rgba(22, 22, 22, 0.5);
-  z-index: 100;
+  z-index: 7;
   right: 0;
   top: 0;
   bottom: 0;
@@ -327,3 +324,13 @@ body{
   // transform: translateX(250px);
   transition: all 1s ease;
 }
+#myList{
+  width: max-content;
+  // margin-top: 5%;
+}
+
+// #myList-page{
+//   // width: max-content;
+//   // flex-wrap: wrap;
+//   // margin-top: 5%;
+// }
