--- a/app/assets/stylesheets/genre.scss
+++ b/app/assets/stylesheets/genre.scss
@@ -99,7 +99,7 @@
     // margin-left: 3vw ;
     margin-left: 50px;
     margin-right: 3vw ;
-    z-index: 8;
+    // z-index: 0;
 }
 
 body{
@@ -312,6 +312,7 @@ body{
   right: 0;
   top: 0;
   bottom: 0;
+  
   margin: auto;
   display: flex;
   align-items: center;
@@ -327,6 +328,7 @@ body{
 }
 #myList{
   width: max-content;
+  // border: 4px solid red;
   // margin-top: 5%;
 }
 
