--- a/app/assets/stylesheets/movie_show_page.scss
+++ b/app/assets/stylesheets/movie_show_page.scss
@@ -1,17 +1,19 @@
 .modal{
     // display: block;
-    z-index: 30;
-    position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+    z-index: 100;
+    // position: fixed;
+    top: 0vh;
+    left: 0vw;
+    bottom: 0vh;
+    right: 0vw;
     background-color: rgba(0, 0, 0, 0.534);
     // width: 60%;
     // height: 50%;
+    position: fixed;
     display: flex;
     justify-content: center;
-    overflow-y: hidden;
+    // overflow-y: hidden; 
+
                 // border: 3px solid red;
 
     
@@ -21,6 +23,8 @@
         border-radius: 11px;
         // overflow-y: scroll;
         display: flex;
+    z-index: 10;
+
         flex-direction: column;
         position: relative;
         // justify-content: center;
@@ -53,7 +57,7 @@
             // width: 50px;
             // height: 50px;   
             position: absolute;
-            z-index: 11;
+            z-index: 31;
             // float: right;
             right: 0;
             margin-right: 1vw;
@@ -101,7 +105,7 @@
             margin-left: 3vw;
             margin-top: 13vw;
             position: absolute;
-            z-index: 11;
+            z-index: 31;
             // height: 50%;
             // width: 50%;
             // border: 4px solid red;
@@ -234,7 +238,7 @@
 .right-btnss{
     position: absolute;
     // left: 0;
-    z-index: 10;
+    z-index: 30;
     margin-top: 44.5vh;
     right: 0;
     top: 0;
@@ -248,7 +252,7 @@
                             border: 1px solid rgb(68, 68, 68);
                             color: gray;
                             background: none;
-                            z-index: 12;
+                            z-index: 32;
                             cursor: pointer;
                             font-weight: 200;
                             background-color: #2C2C2E;
