--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -5,6 +5,7 @@ body {
   // left: 0;
   // top: 0;
   // bottom: 0;
+  overflow-x: hidden;
   // right: 0;
   // background-color: rgba(0,0,0,0.6);
 }
