--- a/app/assets/stylesheets/splash.scss
+++ b/app/assets/stylesheets/splash.scss
@@ -519,3 +519,8 @@ h3 {
         //  color: rgba(255, 255, 255, 0.9);
         display: flex;
       }
+
+      .social-li{
+        display: flex;
+        align-items: center;
+      }
